# starfire

./: .arise-verifier-anchor  .chat_body.json  .deploy-refresh  .dockerignore  .env  .gitignore  .render-omega-v1a-trigger  AGENTS.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_TWO_CONTAINER.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  MEMORY.md  README.md  SOUL.md  SPEC.md  TEST_COVERAGE.md  TOOLS.md  USER.md  bpe_prep.py  build.bat  build.sh  car_training.ipynb  car_training_bpe.py  chat_star.py  chat_star2.py  convert_to_rust.py  docker-compose.yml  doctor_err.txt  doctor_out.txt  entrypoint.sh  interact_star.py  interact_star2.py  interact_star3.py  invention_training.txt  kaggle.yml  kernel-metadata.json  (+20 more)
aion/: Cargo.toml  Dockerfile  RAILWAY_DEPLOY.md  V2_PLAN.md  railway.json
dev/mind-agent/: install.bat  mind-agent-service.py  mind-agent-task.xml  pyproject.toml  render.yaml  requirements.txt  test.py
dev/tta-crypto/: README.md  pyproject.toml
dev/werender-inference/: README.md  pyproject.toml
dev/werender-ml/: README.md  pyproject.toml
lib/: Cargo.toml  api.rs  arise_response_shadow_ext.rs  arise_typed_plan_shadow.rs  cognition.rs  commitment_state.rs  companion_bounded_live_policy.rs  companion_interaction_outcomes.rs  companion_interaction_policy.rs  companion_live_policy_canary.rs  companion_observer.rs  companion_policy_evaluation.rs  companion_policy_outcomes.rs  companion_prediction_ledger.rs  companion_real_interaction_canary.rs  companion_runtime_canary.rs  companion_state.rs  grammar_extension.rs  graph_discovery.rs  http_llm.rs  identity_genome.rs  intervention_guided_abstraction_selection.rs  latent_roles.rs  learning.rs  lib.rs  multistep_abstraction_reuse.rs  omega_g2_shadow.rs  omega_v1f1_projection_guard.rs  omega_v1f1r1_claim_first.rs  omega_v1f1r1_surface.rs  omega_v1f2_shadow.rs  omega_v1f2_shadow_bridge.rs  phrase_critic.rs  recursive_grammar_composition.rs  representation_descendants.rs  representation_genesis.rs  representation_transport.rs  representation_transport_descendants.rs  representation_transport_orbit.rs  rule_induction.rs  (+9 more)
lib/arise_edge/: engine.rs  mod.rs  runtime_shadow.rs  types.rs
lib/asru/: checkpoint.rs  engine.rs  fragility.rs  mod.rs  regime_classifier.rs  regime_memory.rs
lib/autonomy/: broker.rs  budget.rs  goals.rs  kernel.rs  mod.rs  operators.rs
lib/book/: db.rs  mod.rs  pager.rs  sweep.rs  thread.rs
lib/capabilities/: mod.rs  reader.rs  web_reader.rs
lib/car_small/: PLAN.md
lib/causal/: discovery.rs  graph.rs  mod.rs  validation.rs
lib/charge/: congruence.rs  contrast.rs  diagnostics.rs  disagreement.rs  emitters.rs  features.rs  induction.rs  judge.rs  ledger.rs  mod.rs  ontology.rs  resolver.rs  shadow.rs  types.rs  verifier.rs
lib/cognitive_cycle/: mod.rs
lib/companion_state/: mod.rs
lib/concepts/: concept.rs  lifecycle.rs  mod.rs  registry.rs
lib/context/: mod.rs  ring.rs
lib/conversation/: mod.rs
lib/crumbs/: Cargo.toml  PLAN.md
lib/curiosity/: connection.rs  expression.rs  mod.rs  probes.rs
lib/curriculum/: gap_analysis.rs  mod.rs  scheduler.rs
lib/developmental/: adapter.rs  calibration.rs  evidence.rs  manifest.rs  mod.rs  replay.rs  residual.rs  tests.rs
lib/dreaming/: dream_engine.rs  mod.rs  synthesizer.rs  validator.rs
lib/emerging_intelligence/: ledger.rs  mod.rs  shadow.rs  shadow_attachment.rs  updates.rs
lib/environment/: hidden_rule.rs  mod.rs
lib/examples/: a1_bounded_autonomous_kernel.rs  arise_a0_edge_bridge.rs  arise_a1_typed_program_shadow.rs  charge_real_component_probe.rs  charge_routing_probe.rs  disagreement_induced_basis_diagnostic.rs  ei_0a_episode_contract_probe.rs  ei_0b_deterministic_environment_probe.rs  ei_0c_append_only_ledger_probe.rs  ei_0d_reversible_update_probe.rs  ei_0f_r1_digest_remediation_probe.rs  ei_0f_r1_terminal_experiment.rs  ei_0f_r2_terminal_experiment.rs  ei_0f_terminal_experiment.rs  ei_0g_s2_attachment_freeze_probe.rs  ei_0g_shadow_preregistration_probe.rs  h10_evidence_bound_rule_induction.rs  h11_graph_discovered_relation_induction.rs  h12_c_literal_control_conformance.rs  h12_proof_carrying_latent_structural_roles.rs  h12_proof_carrying_latent_structural_roles_acceptance.rs  h12_strict_random_partition_conformance.rs  h13_c_structural_role_transfer_stress.rs  h13c_structural_role_transfer_stress.rs  h4_ontology_induction_probe.rs  h4_real_cycle_shadow_probe.rs  h4_shadow_promotion_probe.rs  h5_b_identifiability_probe.rs  h5_non_memory_ontology_probe.rs  h5_residual_identity_diagnostic.rs  h5_task_profiled_nonmemory_diagnostic.rs  h6_disagreement_contrast_probe.rs  h7_witnessed_congruence_split.rs  h8_transformed_action_order_diamond.rs  h9_executable_commitment_state.rs  h_infant_multi_pressure_priority_probe.rs  h_infant_residual_revision_probe.rs  h_infant_typed_pressure_routing_probe.rs  omega1_endogenous_state_space_genesis.rs  omega2_descendant_necessity.rs  (+35 more)
lib/fabqrc/: Cargo.toml
lib/fact_lock/: SPEC.md
lib/goals/: mod.rs  planning.rs  tracking.rs
lib/grammar_corrector/: mod.rs
lib/input_normalizer/: mod.rs
lib/knowledge/: mod.rs  search.rs  web_synthesis.rs
lib/language_model/: generate.rs  intent_reranker.rs  mod.rs  model.rs  train.rs  vocabulary.rs
lib/language_realization/: mod.rs
lib/language_verification/: mod.rs
lib/learned_expression/: mod.rs
lib/learning/: eviction.rs  hypothesis.rs  mod.rs
lib/llm/: candle_loader.rs  chat.rs  client.rs  http_llm.rs  mod.rs  polish.rs
lib/math/: logic.rs  mod.rs  proof.rs  symbolic.rs
lib/metacog/: critic.rs  intents.rs  mod.rs
lib/multimodal/: audio.rs  binding.rs  image.rs  mod.rs  text.rs
lib/neural/: layer.rs  mod.rs  network.rs  neuron.rs  train.rs
lib/omega_v1_live_bridge/: mod.rs
lib/omega_v1_semantic_plan/: mod.rs
lib/omega_v1_voice_baseline/: metrics.rs  mod.rs
lib/pain/: cost_model.rs  event.rs  mod.rs  (+1 more)
life/: Cargo.toml  EVOLUTION.md  IDENTITY.md  SPEC.md  training.db
llm-server/: Cargo.toml  Dockerfile
src/: Cargo.toml  doctor.rs  experience.rs  grounding.rs  lib.rs  live_api.rs  main.rs  world_model.rs
(+2383 files in other folders)
