[workspace]
resolver = "2"
members = ["src", "lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Zachary Maronek"]
license = "MIT"
description = "Star — Emergent Desktop Intelligence"

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
ureq = "2"
urlencoding = "2"
tiny_http = "0.12"
clap = { version = "4.3.24", features = ["derive"] }
dirs = "5"
