[workspace]
resolver = "2"
members = ["src", "lib", "lib/fabqrc"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Zachary Maronek"]
license = "MIT"
description = "Star — Emergent Desktop Intelligence"

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
# chrono intentionally removed — use std::time::SystemTime instead
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
ureq = { version = "2", features = ["json"] }
urlencoding = "2"
tiny_http = "0.12"
clap = { version = "4.3.24", features = ["derive"] }
dirs = "5"
rand = "0.8"
rand_distr = "0.4"
tempfile = "4"
regex = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
candle-core = { path = "../candle/candle-core" }
candle-transformers = { path = "../candle/candle-transformers" }
safetensors = "0.7.0"
tokenizers = { version = "0.22.0", default-features = false }
parking_lot = "0.12"
