[package]
name = "star"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[lib]
path = "lib.rs"

[[example]]
name = "s3_companion_observer_false_positive_probe"
path = "examples/s3_companion_observer_false_positive_probe.rs"
required-features = ["companion-observer"]

[[example]]
name = "s4_companion_prediction_ledger_probe"
path = "examples/s4_companion_prediction_ledger_probe.rs"
required-features = ["companion-prediction-ledger"]

[[example]]
name = "s5a_shadow_interaction_policy_probe"
path = "examples/s5a_shadow_interaction_policy_probe.rs"
required-features = ["companion-interaction-policy"]

[[example]]
name = "s5b_independent_policy_outcomes_probe"
path = "examples/s5b_independent_policy_outcomes_probe.rs"
required-features = ["companion-policy-outcomes"]

[[example]]
name = "h_infant_typed_pressure_routing_probe"
path = "examples/h_infant_typed_pressure_routing_probe.rs"
required-features = ["developmental-evidence"]

[[example]]
name = "h_infant_multi_pressure_priority_probe"
path = "examples/h_infant_multi_pressure_priority_probe.rs"
required-features = ["developmental-evidence"]

[[example]]
name = "h_infant_residual_revision_probe"
path = "examples/h_infant_residual_revision_probe.rs"
required-features = ["developmental-evidence"]

[[example]]
name = "r1_relational_residual_bridge"
path = "examples/r1_relational_residual_bridge.rs"
required-features = ["relational-evidence"]

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
ureq.workspace = true
urlencoding.workspace = true
tiny_http.workspace = true
clap.workspace = true
dirs.workspace = true
rand.workspace = true
rand_distr.workspace = true
regex.workspace = true

# Voice-refine Phase 3: in-process SLM reranker. Off by default — turning
# this on pulls in lm.rs (or a fork) and its quantization/tokenizer deps.
# Plan: enable when we vendor qwen3-rs for the Qwen 3.5 Small 2B backend.
[features]
default = []
lmrs-backend = []  # enables lib/language_model::intent_reranker::LmRsBackend
companion-observer = []  # S3 explicit-statement observer; proposal-only and shadow-only
companion-prediction-ledger = []  # S4 unresolved commitments and independent scoring; no live influence
companion-interaction-policy = ["companion-prediction-ledger"]  # S5-A shadow proposals and controls
companion-policy-outcomes = ["companion-interaction-policy"]  # S5-B delayed independent outcome collection
 developmental-evidence = []  # H-Infant-0 typed evidence boundary; no runtime wiring
relational-evidence = []  # R1 IngExuity relational residual bridge; shadow-only
