[package]
name = "star"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[lib]
path = "lib.rs"

[[example]]
name = "s3_companion_observer_false_positive_probe"
path = "examples/s3_companion_observer_false_positive_probe.rs"
required-features = ["companion-observer"]

[[example]]
name = "s4_companion_prediction_ledger_probe"
path = "examples/s4_companion_prediction_ledger_probe.rs"
required-features = ["companion-prediction-ledger"]

[[example]]
name = "s5a_shadow_interaction_policy_probe"
path = "examples/s5a_shadow_interaction_policy_probe.rs"
required-features = ["companion-interaction-policy"]

[[example]]
name = "s5b_independent_interaction_outcomes_probe"
path = "examples/s5b_independent_interaction_outcomes_probe.rs"
required-features = ["companion-interaction-outcomes"]

[[example]]
name = "s5c_comparative_policy_evaluation_probe"
path = "examples/s5c_comparative_policy_evaluation_probe.rs"
required-features = ["companion-policy-evaluation"]

[[example]]
name = "s6a_bounded_live_policy_probe"
path = "examples/s6a_bounded_live_policy_probe.rs"
required-features = ["companion-bounded-live-policy"]

[[example]]
name = "s6b_adversarial_live_policy_stress"
path = "examples/s6b_adversarial_live_policy_stress.rs"
required-features = ["companion-live-policy-stress"]

[[example]]
name = "s6c_real_interaction_canary_evidence"
path = "examples/s6c_real_interaction_canary_evidence.rs"
required-features = ["companion-real-interaction-canary"]

[[example]]
name = "s6c_external_evaluator_channel_probe"
path = "examples/s6c_external_evaluator_channel_probe.rs"
required-features = ["companion-real-interaction-canary"]

[[example]]
name = "stlm_l0_semantic_program_probe"
path = "examples/stlm_l0_semantic_program_probe.rs"
required-features = ["semantic-response-program"]

[[example]]
name = "stlm_l0c_deterministic_renderer_probe"
path = "examples/stlm_l0c_deterministic_renderer_probe.rs"
required-features = ["deterministic-language-renderer"]

[[example]]
name = "stlm_l1_independent_language_verifier_probe"
path = "examples/stlm_l1_independent_language_verifier_probe.rs"
required-features = ["independent-language-verifier"]

[[example]]
name = "omega_v1a_voice_baseline"
path = "examples/omega_v1a_voice_baseline.rs"
required-features = ["omega-v1-baseline"]

[[example]]
name = "omega_v1b_voice_state_shadow"
path = "examples/omega_v1b_voice_state_shadow.rs"
required-features = ["voice-state-shadow"]

[[example]]
name = "omega_v1c_semantic_plan_shadow"
path = "examples/omega_v1c_semantic_plan_shadow.rs"
required-features = ["omega-v1-semantic-plan"]

[[example]]
name = "omega_v1d_bounded_live_bridge"
path = "examples/omega_v1d_bounded_live_bridge.rs"
required-features = ["omega-v1-live-bridge"]

[[example]]
name = "omega_v1d1_http_canary"
path = "examples/omega_v1d1_http_canary.rs"
required-features = ["omega-v1-http-canary"]

[[example]]
name = "omega_v1f1_offline_evaluation"
path = "examples/omega_v1f1_offline_evaluation.rs"
required-features = ["omega-v1-learned-expression"]

[[example]]
name = "omega_v1f1_model_export"
path = "examples/omega_v1f1_model_export.rs"
required-features = ["omega-v1-learned-expression"]

[[example]]
name = "omega_v1f2_shadow_probe"
path = "examples/omega_v1f2_shadow_probe.rs"
required-features = ["omega-v1-f2-shadow"]

[[example]]
name = "h_infant_typed_pressure_routing_probe"
path = "examples/h_infant_typed_pressure_routing_probe.rs"
required-features = ["developmental-evidence"]

[[example]]
name = "h_infant_multi_pressure_priority_probe"
path = "examples/h_infant_multi_pressure_priority_probe.rs"
required-features = ["developmental-evidence"]

[[example]]
name = "h_infant_residual_revision_probe"
path = "examples/h_infant_residual_revision_probe.rs"
required-features = ["developmental-evidence"]

[[example]]
name = "r1_relational_residual_bridge"
path = "examples/r1_relational_residual_bridge.rs"
required-features = ["relational-evidence"]

[[example]]
name = "h13c_structural_role_transfer_stress"
path = "examples/h13c_structural_role_transfer_stress.rs"

[[example]]
name = "omega_g1_bounded_grammar_extension"
path = "examples/omega_g1_bounded_grammar_extension.rs"

[[example]]
name = "omega_g2_recursive_grammar_composition"
path = "examples/omega_g2_recursive_grammar_composition.rs"

[[example]]
name = "omega_g3_multistep_abstraction_reuse"
path = "examples/omega_g3_multistep_abstraction_reuse.rs"

[[example]]
name = "omega_g4_intervention_guided_abstraction_selection"
path = "examples/omega_g4_intervention_guided_abstraction_selection.rs"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
ureq.workspace = true
urlencoding.workspace = true
tiny_http.workspace = true
clap.workspace = true
dirs.workspace = true
rand.workspace = true
rand_distr.workspace = true
regex.workspace = true

# Voice-refine Phase 3: in-process SLM reranker. Off by default — turning
# this on pulls in lm.rs (or a fork) and its quantization/tokenizer deps.
# Plan: enable when we vendor qwen3-rs for the Qwen 3.5 Small 2B backend.
[features]
default = []
lmrs-backend = []  # enables lib/language_model::intent_reranker::LmRsBackend
companion-observer = []  # S3 explicit-statement observer; proposal-only and shadow-only
companion-prediction-ledger = []  # S4 unresolved commitments and independent scoring; no live influence
companion-interaction-policy = ["companion-prediction-ledger"]  # S5-A shadow proposals and controls
companion-interaction-outcomes = ["companion-interaction-policy"]  # S5-B independent witnesses and replay
companion-policy-evaluation = ["companion-interaction-outcomes"]  # S5-C held-out comparative evaluation; no live influence
companion-bounded-live-policy = ["companion-policy-evaluation"]  # S6-A opt-in bounded response-planning metadata
companion-live-policy-stress = ["companion-bounded-live-policy"]  # S6-B adversarial audit/replay stress; no new authority
companion-real-interaction-canary = ["companion-policy-evaluation"]  # S6-C consented typed canary intake; no runtime authority
semantic-response-program = []  # STLM L0-B typed semantic authorization and replay; no Runtime::chat() wiring
deterministic-language-renderer = ["semantic-response-program"]  # STLM L0-C bounded reference realization; no live influence
independent-language-verifier = ["deterministic-language-renderer"]  # STLM L1 / ΩV1-E inverse semantic verifier; builder-only and offline
omega-v1-baseline = []  # ΩV1-A frozen voice corpus and metrics; no live influence
voice-state-shadow = []  # ΩV1-B typed persistent VoiceState; explicit mutation only, no live response influence
omega-v1-semantic-plan = ["semantic-response-program"]  # ΩV1-C complete typed plans in matched shadow mode
omega-v1-live-bridge = ["omega-v1-semantic-plan", "voice-state-shadow"]  # ΩV1-D0 deterministic canary kernel; no live wiring until D1
omega-v1-http-canary = ["omega-v1-live-bridge"]  # ΩV1-D1 successful POST /chat response-boundary splice only
omega-v1-learned-expression = ["independent-language-verifier", "voice-state-shadow"]  # ΩV1-F1 offline closed-lattice learned selector; no runtime wiring
omega-v1-f2-shadow = ["omega-v1-http-canary", "omega-v1-learned-expression"]  # ΩV1-F2 post-response shadow observation; no learned text return
developmental-evidence = []  # H-Infant-0 typed evidence boundary; no runtime wiring
relational-evidence = []  # R1 IngExuity relational residual bridge; shadow-only