[package]
name = "star"
version = "0.1.0"
edition = "2021"
authors = ["Zachary Maronek"]
description = "A reasoning intelligence that finds its power from architecture, not scale."
license = "MIT"

[dependencies]
# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# HTTP client
ureq = "2"
urlencoding = "2"

# HTTP server
tiny_http = "0.12"

# CLI
clap = { version = "4.3.24", features = ["derive"] }

# Paths
dirs = "5"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "star"
path = "src/main.rs"
