[package]
name = "llm-server"
version = "0.1.0"
edition = "2021"
description = "HTTP inference server for Bonsai-8B GGUF via Candle"

[dependencies]
# Candle from crates.io (NOT local paths — Docker needs published versions)
candle-core = "0.6"
candle-transformers = "0.6"

# HTTP server
tiny_http = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Random for request IDs
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
