[package]
name = "star_bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "star"
path = "main.rs"

[features]
llm = ["star/llm"]

[dependencies]
star = { path = "../lib", features = ["llm"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
ureq.workspace = true
urlencoding.workspace = true
tiny_http.workspace = true
clap.workspace = true
dirs.workspace = true
reqwest = { version = "0.12", features = ["blocking"] }
