[package]
name = "star_bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "star"
path = "main.rs"

[[bin]]
name = "quanot_bench"
path = "bin/quanot_bench.rs"

[[bin]]
name = "train_model"
path = "bin/train_model.rs"

[[bin]]
name = "test_gen"
path = "bin/test_gen.rs"

[[bin]]
name = "quick_gen"
path = "bin/quick_gen.rs"

[[bin]]
name = "test_save_load"
path = "bin/test_save_load.rs"

[[bin]]
name = "test_trained"
path = "bin/test_trained.rs"

[[bin]]
name = "smoke_ckpt_v2"
path = "bin/smoke_ckpt_v2.rs"

[[bin]]
name = "parser_test"
path = "bin/parser_test.rs"

[[bin]]
name = "bench_train"
path = "bin/bench_train.rs"

[features]
default = []
omega-v1-http-canary = ["star/omega-v1-http-canary"]
# Retained for explicit legacy proxy testing only.
omega-v1-f2-shadow = ["star/omega-v1-f2-shadow"]
# Production compiles the sealed F2 facade and metadata-only L1-C observer but
# intentionally does not enable the binary crate's legacy HTTP proxy cfg.
# Runtime::chat remains the sole text authority.
starfire-live = ["star/stlm-l1c-shadow"]

[dependencies]
star = { path = "../lib" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
ureq.workspace = true
urlencoding.workspace = true
tiny_http.workspace = true
clap.workspace = true
dirs.workspace = true
