[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mind-agent"
version = "0.1.0"
description = "LLM-Independent AI Agent using mind + sep-w + graph-ir"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
mind-agent = "mind_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
