[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tta-crypto"
version = "0.1.0"
description = "Temporal Truth Architecture for Crypto"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Zachary Maronek", email = "zwmaronek@gmail.com"}
]
dependencies = [
    "httpx>=0.25.0",
    "pandas>=2.0.0",
]

[project.scripts]
tta-crypto = "tta_crypto.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
