[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "werender-inference"
version = "0.1.0"
description = "Zero-Config Distributed LLM Inference"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Zachary Maronek", email = "zwmaronek@gmail.com"}
]
dependencies = [
    "requests>=2.28.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
werender-inference = "werender_inference.main:main"

[project.urls]
Homepage = "https://github.com/toxzak-svg/werender-inference"
Repository = "https://github.com/toxzak-svg/werender-inference"

[tool.setuptools.packages.find]
where = ["src"]
