[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "werender-ml"
version = "0.1.0"
description = "Zero-Config Distributed ML Training"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Zachary Maronek", email = "zwmaronek@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
werender-ml = "werender_ml.main:main"

[project.urls]
Homepage = "https://github.com/toxzak-svg/werender-ml"
Repository = "https://github.com/toxzak-svg/werender-ml"

[tool.setuptools.packages.find]
where = ["src"]
