[package]
name = "star-crumbs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
parking_lot = "0.12"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3"
