[package]
name = "aion-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aion"
path = "src/main.rs"

[dependencies]
aion-core = { path = "../aion-core" }
aion-drivers = { path = "../aion-drivers" }
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
