[package]
name = "aion-core"
version.workspace = true
edition.workspace = true

[dependencies]
# Database — rusqlite with bundled SQLite, accessed via tokio blocking thread
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Hash map (faster than std::collections)
ahash = "0.7"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async trait
async-trait = "0.1"

# Futures utilities
futures = "0.3"

[dev-dependencies]
tempfile = "3"
