[package]
name = "aion-drivers"
version.workspace = true
edition.workspace = true

[dependencies]
aion-core = { path = "../aion-core" }
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
