[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metacognitive-confidence-monitoring"
version = "0.1.0"
description = "Research scaffold for online confidence monitoring during evidence accumulation."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
